--- a/src/components/editor-components/slider-component/slider-component.scss
+++ b/src/components/editor-components/slider-component/slider-component.scss
@@ -1,47 +1,23 @@
 @import '../../../styles/constants.scss';
 
 .SliderComponent {
-	display: flex;
-	justify-content: space-between;
-	align-items: stretch;
-	margin:  0;
-	margin: 0 0 20px;
-	min-height: 30px;
+  min-height: 30px;
 
-	&-label {
-		margin: 0;
-		display: flex;
-		align-items: center;
-		flex-grow: 1;
-		cursor: pointer;
-		user-select: none;
-	}
+  .horizontal-slider {
+    width: 100%;
+    max-width: 500px;
+    height: 50px;
+    border: 1px solid grey;
+  }
 
-	&-input {
-		background-color: $color-white;
-	    padding: 4px 6px;
-	    -webkit-appearance: none;
-	    outline: none;
-	    box-shadow: none;
-	    border: 0;
-	    color: $color-black;
-	}
+  .vertical-slider {
+    height: 380px;
+    width: 50px;
+    border: 1px solid grey;
+  }
 
-	.horizontal-slider {
-	  width: 100%;
-	  max-width: 500px;
-	  height: 50px;
-	  border: 1px solid grey;
-	}
-
-	.vertical-slider {
-	  height: 380px;
-	  width: 50px;
-	  border: 1px solid grey;
-	}
-
-	.handle {
-	  font-size: 0.9em;
+  .handle {
+    font-size: 0.9em;
     text-align: center;
     background-color: $color-orange;
     color: $color-white;
@@ -51,55 +27,63 @@
     height: 100%;
     width: 30px;
     justify-content: center;
-	}
+    border-radius: 50%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: normal;
+    font-weight: bold;
+    user-select: none;
+  }
 
-	.handle.active {
-	  background-color: $color-white;
-    color: $color-black;
-	}
+  .handle.active {
+    background-color: $color-white;
+    color: $color-orange;
+  }
 
-	.bar {
-	  position: relative;
-	  background: $color-white;
-	  top: 50%;
-		height: 4px;
-    transform: translateY(-50%);
-	}
+  .bar {
+    position: relative;
+    background: $color-white;
+    top: 50%;
+    height: 4px;
+   transform: translateY(-50%);
+  }
 
-	.bar.bar-1 {
-	  background: $color-orange;
-	}
+  .bar.bar-1 {
+    background: $color-orange;
+  }
 
-	.bar.bar-2 {
-	  background: $color-white;
-	}
+  .bar.bar-2 {
+    background: $color-white;
+  }
 
-	.horizontal-slider .bar {
-	  top: 20px;
-	  height: 10px;
-	}
+  .horizontal-slider .bar {
+    top: 20px;
+    height: 10px;
+  }
 
-	.horizontal-slider .handle {
-	  top: 1px;
-	  width: 50px;
-	  height: 48px;
-	  line-height: 48px;
-	}
+  .horizontal-slider .handle {
+    top: 1px;
+    width: 50px;
+    height: 48px;
+    line-height: 48px;
+  }
 
-	.vertical-slider .handle {
-	  left: 1px;
-	  width: 48px;
-	  line-height: 50px;
-	}
+  .vertical-slider .handle {
+    left: 1px;
+    width: 48px;
+    line-height: 50px;
+  }
 
-	.vertical-slider .bar {
-	  left: 20px;
-	  width: 10px;
-	}
+  .vertical-slider .bar {
+    left: 20px;
+    width: 10px;
+  }
 
-	#horizontal-0,
-	#horizontal-1, #horizontal-2, #horizontal-3,
-	#vertical {
-	  margin: 20px 10px;
-	}
+  #horizontal-0,
+  #horizontal-1, #horizontal-2, #horizontal-3,
+  #vertical {
+    margin: 20px 10px;
+  }
 }
