--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -1,5 +1,8 @@
 $color-white: #ECDFBD;
 $color-blue: #20457C;
 $color-black: #3B3A35;
+$color-black-darker: #2A2924;
 $color-orange: #FB6648;
 $color-purple: #5E3448;
+
+$shadow-soft-inset: inset 0 0px 4px -1px rgba(0,0,0,1);
